force-app/main/default/objects/CventEvents__DataRefreshSettings__c/fields/CventEvents__LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__LastSyncDate__c</fullName>
    <description>The last date that the synchronization occurred.</description>
    <inlineHelpText>The last date that the synchronization occurred.</inlineHelpText>
    <label>Last Synced Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>