force-app/main/default/objects/CventEvents__DataRefreshSettings__c/fields/CventEvents__Status__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Status__c</fullName>
    <description>Last sync process status.</description>
    <inlineHelpText>Last sync process status.</inlineHelpText>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>