force-app/main/default/objects/CventEvents__DataRefreshSettings__c/fields/CventEvents__Unit__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Unit__c</fullName>
    <description>Stores the unit of automatic sync.</description>
    <inlineHelpText>Stores the unit of automatic sync.</inlineHelpText>
    <label>Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>